fix: remove FX toolkit startup in tests